--- a/client/web/src/search/home/SearchPageFooter.module.scss
+++ b/client/web/src/search/home/SearchPageFooter.module.scss
@@ -76,3 +76,9 @@
 .server-footer {
     margin: 2rem 0;
 }
+
+.cta-card {
+    display: flex;
+    flex-direction: row;
+    padding: 0.75rem 1rem;
+}
