--- a/client/web/src/tour/components/Tour/Tour.module.scss
+++ b/client/web/src/tour/components/Tour/Tour.module.scss
@@ -126,7 +126,11 @@
         color: var(--link-color);
         font-weight: bold;
         display: inline-block;
-        padding: 0 0.25rem 0 0.5rem;
+        padding: 0 0.25rem 0 0;
+
+        .is-small & {
+            padding-left: 0.5rem;
+        }
     }
 
     .step-list-item {
